# src/fire/views.py
@@ -8,11 +8,10 @@ import time
 from flask import Flask, render_template, request
 
 from . import db
+from . import api
 
 
-FIRE_URL = "/fire"
-PAGE_SIZE = 10
-COLLS_LIST = []
+BASE_URL = "/fire"
 
 
 def create_app(debug=True, base_url="/fire", templates="../templates"):
@@ -29,49 +28,42 @@ def create_app(debug=True, base_url="/fire", templates="../templates"):
 
 def configure_app(app, base_url="/fire", authorize_wrap=None):
     """Configure existing Flask app with firestore view functions, template filters and global functions"""
-    global FIRE_URL
-    FIRE_URL = base_url
+    global BASE_URL
+    BASE_URL = base_url
     if authorize_wrap:
-        app.add_url_rule(base_url + "/", view_func=authorize_wrap(fire_home_view))
+        app.add_url_rule(base_url + "/", view_func=authorize_wrap(home_view))
         app.add_url_rule(
-            base_url + "/<string:coll>/", view_func=authorize_wrap(fire_coll_view)
+            base_url + "/<string:name>/", view_func=authorize_wrap(list_view)
         )
         app.add_url_rule(
-            base_url + "/<string:coll>/<path:ref>",
-            view_func=authorize_wrap(fire_doc_view),
+            base_url + "/<string:parent>/<path:item>",
+            view_func=authorize_wrap(item_view),
         )
     else:
-        app.add_url_rule(base_url + "/", view_func=fire_home_view)
-        app.add_url_rule(base_url + "/<string:coll>/", view_func=fire_coll_view)
-        app.add_url_rule(
-            base_url + "/<string:coll>/<path:ref>", view_func=fire_doc_view
-        )
-    app.add_template_filter(is_ref)
-    app.add_template_filter(ref_link)
+        app.add_url_rule(base_url + "/", view_func=home_view)
+        app.add_url_rule(base_url + "/<string:name>/", view_func=list_view)
+        app.add_url_rule(base_url + "/<string:parent>/<path:item>", view_func=item_view)
+    app.add_template_filter(is_item)
+    app.add_template_filter(item_link)
     app.add_template_filter(show_date)
     app.add_template_global(get_pager)
-    # app.add_template_global(get_colls)
+    # app.add_template_global(get_lists)
     # app.add_template_global(get_stats)
 
 
 # @app.template_filter()
-def is_ref(ref):
+def is_item(ref):
     if "Reference" in ref.__class__.__name__:
         return True
     return False
 
 
 # @app.template_filter()
-def ref_link(ref):
-    if not is_ref(ref):
+def item_link(ref):
+    if not is_item(ref):
         return ref
-    # doc_ref
-    if hasattr(ref, "path"):
-        return ref.path
-    # coll_ref - collection urls always end with / here
-    if ref.parent:
-        return "%s/%s/" % (ref.parent.path, ref.id)
-    return "%s/" % ref.id
+    # subcollections always end with / - see item_to_path and templates/fire_item.html
+    return api.item_to_path(ref)
 
 
 # @app.template_filter()
@@ -86,7 +78,7 @@ def show_date(timestamp, fmt="%Y-%m-%d %H:%M:%S"):
 # @app.template_global()
 def get_pager(count=None, page=1, size=None):
     if size is None:
-        size = PAGE_SIZE
+        size = api.PAGE_SIZE
     if count is not None and count <= size:
         return
     first_url = None
@@ -122,131 +114,44 @@ def get_pager(count=None, page=1, size=None):
     return (first_url, prev_url, next_url, last_url)
 
 
-def get_colls(reset=False):
-    global COLLS_LIST
-    if len(COLLS_LIST) > 0 and not reset:
-        return COLLS_LIST
-    firestore_colls = []
-    for coll_ref in db.list_root():
-        firestore_colls.append(coll_ref.id)
-    COLLS_LIST = sorted(firestore_colls)
-    return COLLS_LIST
-
-
-firestore_stats = {}
-
-
-def get_stats(reset=False):
-    global firestore_stats
-    if len(firestore_stats) > 0 and not reset:
-        return firestore_stats
-    firestore_stats = {}
-    firestore_stats["Stats"] = {"timestamp": time.time()}
-    for coll_ref in db.list_root():
-        firestore_stats[coll_ref.id] = get_coll_stats(coll_ref)
-    return firestore_stats
-
-
-def get_coll_stats(coll_ref, limit=1000):
-    # count only on demand now
-    # count = len(list(coll_ref.list_documents()))
-    count = None
-    stats = {
-        "coll_ref": coll_ref,
-        # "properties": {},
-        "count": count,
-    }
-    if stats["count"] == limit:
-        stats["count"] = str(limit) + "+"
-    return stats
-
-
-def get_coll_count(coll, reset=False):
-    global firestore_stats
-    if (
-        coll in firestore_stats
-        and firestore_stats[coll]["count"] is not None
-        and not reset
-    ):
-        return firestore_stats[coll]["count"]
-    if coll not in get_colls():
-        return
-    if coll not in firestore_stats:
-        coll_ref = db.get_coll_ref(coll)
-        firestore_stats[coll] = get_coll_stats(coll_ref)
-    else:
-        coll_ref = firestore_stats[coll]["coll_ref"]
-    count = 0
-    for doc_ref in coll_ref.list_documents():
-        count += 1
-    firestore_stats[coll]["count"] = count
-    return firestore_stats[coll]["count"]
-
-
 # @app.route("/fire/")
 # @sessions.flask_authorize("admin")
-def fire_home_view():
+def home_view():
     reset = request.args.get("reset", False)
-    stats = get_stats(reset)
+    stats = api.get_stats(reset)
     return render_template(
-        "fire_view.html", fire_url=FIRE_URL, colls=get_colls(), coll=None, stats=stats,
+        "fire_home.html",
+        base_url=BASE_URL,
+        lists=api.get_lists(),
+        name=None,
+        stats=stats,
     )
 
 
-# @app.route("/fire/<string:coll>/")
+# @app.route("/fire/<string:name>/")
 # @sessions.flask_authorize("admin")
-def fire_coll_view(coll):
-    # when dealing with subcollections coming from fire_doc_view
-    if coll.split("/")[0] not in get_colls():
-        return fire_home_view()
+def list_view(name):
+    # when dealing with subcollections coming from item_view
+    if name.split("/")[0] not in api.get_lists():
+        return home_view()
     sort = request.args.get("sort", None)
     page = int(request.args.get("page", 1))
+    fields = request.args.get("fields", None)
     if page < 1:
         page = 1
-    count = get_coll_count(coll)
-    limit = PAGE_SIZE
-    offset = (page - 1) * limit
+    count = api.get_list_count(name)
     columns = []
-    rows = []
-    coll_ref = db.get_coll_ref(coll)
+    rows = api.list_get(name, page, sort, fields)
+    if len(rows) > 0:
+        columns = sorted(rows[0].keys())
+    # TODO: can we get rid of this too?
+    coll_ref = db.get_coll_ref(name)
     parent = coll_ref.parent
-    # for doc in db.ilist_entities(coll, limit, offset, **kwargs):
-    query = coll_ref.limit(limit).offset(offset)
-    if sort:
-        if sort.startswith("-"):
-            query = query.order_by(sort[1:], direction="DESCENDING")
-        else:
-            query = query.order_by(sort)
-    for doc in query.stream():
-        info = doc.to_dict()
-        if hasattr(doc, "create_time") and doc.create_time:
-            doc.create_time = doc.create_time.seconds + float(
-                doc.create_time.nanos / 1000000000.0
-            )
-        if hasattr(doc, "update_time") and doc.update_time:
-            doc.update_time = doc.update_time.seconds + float(
-                doc.update_time.nanos / 1000000000.0
-            )
-        if hasattr(doc, "read_time") and doc.read_time:
-            doc.read_time = doc.read_time.seconds + float(
-                doc.read_time.nanos / 1000000000.0
-            )
-        info.update(doc.__dict__)
-        del info["_data"]
-        if len(columns) < 1:
-            columns = sorted(info.keys())
-        if (
-            "data" in info
-            and isinstance(info["data"], bytes)
-            and len(info["data"]) > 20
-        ):
-            info["data"] = "%s... (%s bytes)" % (info["data"][:20], len(info["data"]))
-        rows.append(info)
     return render_template(
-        "fire_coll.html",
-        fire_url=FIRE_URL,
-        colls=get_colls(),
-        coll=coll,
+        "fire_list.html",
+        base_url=BASE_URL,
+        lists=api.get_lists(),
+        name=name,
         sort=sort,
         page=page,
         count=count,
@@ -256,48 +161,24 @@ def fire_coll_view(coll):
     )
 
 
-# @app.route("/fire/<string:coll>/<path:ref>")
+# @app.route("/fire/<string:parent>/<path:item>")
 # @sessions.flask_authorize("admin")
-def fire_doc_view(coll, ref):
-    if coll not in get_colls():
-        return fire_home_view()
-    # subcollections always end with / - see ref_link and templates/fire_doc.html
-    if ref.endswith("/"):
-        coll += "/" + ref[:-1]
-        return fire_coll_view(coll)
-    coll_ref = db.get_coll_ref(coll)
-    doc_ref = coll_ref.document(ref)
-    doc = doc_ref.get()
-    subcolls = []
-    for subcoll_ref in doc_ref.collections():
-        subcolls.append(subcoll_ref.id)
-    parent = None
-    info = doc.to_dict()
-    if hasattr(doc, "create_time") and doc.create_time:
-        doc.create_time = doc.create_time.seconds + float(
-            doc.create_time.nanos / 1000000000.0
-        )
-    if hasattr(doc, "update_time") and doc.update_time:
-        doc.update_time = doc.update_time.seconds + float(
-            doc.update_time.nanos / 1000000000.0
-        )
-    if hasattr(doc, "read_time") and doc.read_time:
-        doc.read_time = doc.read_time.seconds + float(
-            doc.read_time.nanos / 1000000000.0
-        )
-    info.update(doc.__dict__)
-    del info["_data"]
-    if doc.reference.parent:
-        parent = doc.reference.parent
+def item_view(parent, item):
+    if parent not in api.get_lists():
+        return home_view()
+    # subcollections always end with / - see item_to_path and templates/fire_item.html
+    if item.endswith("/"):
+        parent += "/" + item[:-1]
+        return list_view(parent)
+    fields = request.args.get("fields", None)
+    # children = request.args.get("children", False)
+    info = api.item_get(parent, item, fields=fields, children=True)
     return render_template(
-        "fire_doc.html",
-        fire_url=FIRE_URL,
-        colls=get_colls(),
-        coll=coll,
-        ref=doc_ref,
+        "fire_item.html",
+        base_url=BASE_URL,
+        lists=api.get_lists(),
+        name=parent,
         info=info,
-        subcolls=subcolls,
-        parent=parent,
     )
 
 
